--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "cra-template": "1.2.0",
     "firebase": "^9.9.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
