--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "cra-template": "1.2.0",
-    "firebase": "^9.9.2",
+    "firebase": "^9.9.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -15,7 +15,8 @@
     "react-query": "^3.39.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "swr": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
